welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: illegal start of simple expression
  if (isWeekend)= {
                ^